# dtkmultimedia

./: .gitignore  CMakeLists.txt  README.md  README.zh_CN.md  test-recoverage.sh
.reuse/: dep5
debian/: changelog  control  control.in  libdtk6multimedia-dev.install  libdtk6multimedia.install  libdtk6ocr-dev.install  libdtk6ocr.install  libdtkmultimedia-dev.install  libdtkmultimedia.install  libdtkocr-dev.install  libdtkocr.install  rules
docs/: CMakeLists.txt  daudioinput.zh_CN.dox  daudioout.zh_CN.dox  daudiorecorder.zh_CN.dox  dcamera.zh_CN.dox  dcompositemanager.zh_CN.dox  dengineplayer.zh_CN.dox  dgstplayerproxy.zh_CN.dox  dimagecapture.zh_CN.dox  dmediacapturesession.zh_CN.dox  dmediaformat.zh_CN.dox  dmediaplayer.zh_CN.dox  dmediaplaylist.zh_CN.dox  dmediarecorder.zh_CN.dox  dmpvproxy.zh_CN.dox  dplatformmediaplayer.zh_CN.dox  dplayerbackend.zh_CN.dox  dscreenrecorder.zh_CN.dox  dscreenshot.zh_CN.dox  dvideowidget.zh_CN.dox  index.zh_CN.md
docs/dtkmultimedia/: daudioinput.zh_CN.dox  daudioout.zh_CN.dox  daudiorecorder.zh_CN.dox  dcamera.zh_CN.dox  dcompositemanager.zh_CN.dox  dgstplayerproxy.zh_CN.dox  dimagecapture.zh_CN.dox  dmediacapturesession.zh_CN.dox  dmediaformat.zh_CN.dox  dmediaplayer.zh_CN.dox  dmediaplaylist.zh_CN.dox  dmediarecorder.zh_CN.dox  dmpvproxy.zh_CN.dox  dmultioperateinterface.zh_CN.dox  dplatformmediaplayer.zh_CN.dox  dplayerbackend.zh_CN.dox  dscreenrecorder.zh_CN.dox  index.zh_CN.md
docs/dtkmultimediawidgets/: dengineplayer.zh_CN.dox  dscreenshot.zh_CN.dox  dvideowidget.zh_CN.dox  index.zh_CN.md
docs/dtkocr/: docr.zh_CN.dox  docrplugininterface.zh_CN.dox  index.zh_CN.md
examples/audioRecorder/: CMakeLists.txt  main.cpp
examples/camera/: CMakeLists.txt  camera.cpp  camera.h  camera.ui  camera_qt6.ui  main.cpp  previewopenglwidget.cpp  previewopenglwidget.h
examples/mideaConvertAndInfo/: CMakeLists.txt  main.cpp  widget.cpp  widget.h  widget.ui
examples/ocrCmd/: CMakeLists.txt  main.cpp
examples/ocrDebugger/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
examples/ocrPlugin/: CMakeLists.txt  example.cpp  example.h
examples/ocrPlugin/debian/: changelog  control  copyright
examples/ocrPlugin/dtkocrpluginexamplemodel/: model.pt
examples/player/: CMakeLists.txt  histogramwidget.cpp  histogramwidget.h  main.cpp  player.cpp  player.h  playercontrols.cpp  playercontrols.h  playlistmodel.cpp  playlistmodel.h  videowidget.cpp  (+1 more)
include/: demo.h  namespace.h
src/: CMakeLists.txt  demo.cpp
src/multimedia/: CMakeLists.txt
src/multimedia/audiorecorder/: daudiorecorder.cpp  daudiorecorder_p.h
src/multimedia/camera/: daudioinput.cpp  daudioinput_p.h  dcamera.cpp  dcamera_p.h  dimagecapture.cpp  dimagecapture_p.h  dmediacapturesession.cpp  dmediacapturesession_p.h  dmediaformat.cpp  dmediaformat_p.h  dmediarecorder.cpp  dmediarecorder_p.h
src/multimedia/camera/libcam/: LPF_V4L2.c  LPF_V4L2.h  datamanager.cpp  datamanager.h  load_libs.c  load_libs.h  majorimageprocessingthread.cpp  majorimageprocessingthread.h
src/multimedia/camera/libcam/libcam/: cameraconfig.h  camoptions.c  camview.c  camview.h
src/multimedia/camera/libcam/libcam_encoder/: encoder.c  mp4.c  mp4.h
src/multimedia/common/interface/: daudioout.cpp  daudioout.h  daudioout_p.h  dcompositemanager.cpp  dcompositemanager.h  dcompositemanager_p.h  dmediametadata.cpp  dmediametadata.h  dmediaplayer.cpp  dmediaplayer_p.h  dmediaplaylist.cpp  dmediaplaylist.h  dplatformmediaplayer.cpp  dplatformmediaplayer.h  dplatformmediaplayer_p.h  dplayerbackend.cpp  dplayerbackend.h  dplayerbackend_p.h
src/multimedia/common/utils/: config.h  dmpvhelper.hpp  hwdec_probe.cpp  hwdec_probe.h  options.cpp  options.h
src/multimedia/ffmpeg/: daudioencoderinterface.cpp  daudioencoderinterface.h  daudioencoderinterface_p.h  dmpvproxy.cpp  dmpvproxy.h  dmpvproxy_p.h
src/multimedia/gstreamer/: dgstplayerproxy.cpp  dgstplayerproxy.h  dgstplayerproxy_p.h  videosurface.cpp  videosurface.h
src/multimedia/multimediainfoandconv/: dmultioperate.cpp  dmultioperate.h  dmultioperateinterface.cpp  dmultioperateinterface_p.h  dmultioperateprocess.cpp  dmultioperateprocess.h
src/multimedia/screenrecorder/: dscreenrecorder.cpp  dscreenrecorder_p.h  videostreamffmpeg.cpp  videostreamffmpeg.h  videostreaminterface.cpp  videostreaminterface.h
src/multimediawidgets/: CMakeLists.txt
src/multimediawidgets/common/utils/: config.h  utils.cpp  utils.h
src/multimediawidgets/engine/multimedia/: dengineplayer.cpp  dengineplayer.h  dengineplayer_p.h  dvideowidget.cpp  dvideowidget.h  dvideowidget_p.h
src/multimediawidgets/engine/multimedia/player/: dplaylistmodel.cpp  dplaylistmodel.h  eventlogutils.cpp  eventlogutils.h  filefilter.cpp  filefilter.h  gstutils.cpp  gstutils.h  movieconfiguration.cpp  movieconfiguration.h  onlinesub.cpp  onlinesub.h  playerengine.cpp  playerengine.h  playerwidget.cpp  playerwidget.h
src/multimediawidgets/engine/plugin/ffmpeg/: dmpvglwidget.cpp  dmpvglwidget.h
src/multimediawidgets/engine/plugin/gstreamer/: dgstplayerglwidget.cpp  dgstplayerglwidget.h
src/multimediawidgets/screenshot/: dscreenshot.cpp  dscreenshot_p.h
src/ocr/: CMakeLists.txt
src/ocr/dtkocrmodels/: rec.ncnn.param
src/ocr/dtkocrmodels/v5/: zh-Hans_en.txt
src/ocr/interface/: docr.cpp  docr_p.h  docrplugininterface.cpp
src/ocr/ppocr/: postprocess_op.cpp  postprocess_op.h  ppocr.cpp  ppocr.h  ppocrv5.cpp  ppocrv5.h  utility.h
tests/: CMakeLists.txt  main.cpp  ut-daudioout.cpp  ut-demo.cpp  ut-dmediametadata.cpp  ut-dmediaplayer.cpp  ut-dmediaplaylist.cpp  ut-dvideowidget.cpp  ut_daudioinput.cpp  ut_daudioout.cpp  ut_daudiorecorder.cpp  ut_dcamera.cpp  ut_ddemoinnterface.cpp  ut_denginegstplayer.cpp  ut_dengineplayer.cpp  ut_dimagecapture.cpp  ut_dmediacapturesession.cpp  ut_dmediaformat.cpp  ut_dmediametadata.cpp  ut_dmediaplayer.cpp  ut_dmediaplaylist.cpp  ut_dmediarecorder.cpp  ut_dmultioperateinterface.cpp  ut_docr.cpp  ut_docrplugininterface.cpp  ut_dscreenrecorer.cpp  ut_dvideowidget.cpp
tests/dbus/: fakeInterface.cmake
tests/ocrplugin/: CMakeLists.txt  ocrplugin.cpp
(+90 files in other folders)
